<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        android:id="@+id/mainMenuFrame"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="application.MainActivity" >

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <TextView
                android:id="@+id/textViewGameTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:layout_alignParentTop="true" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_centerVertical="true" >
            <Button
                    android:id="@+id/buttonEntrar"
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:text="@string/entrar"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            <Button
                    android:id="@+id/buttonRegistrar"
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="70dp"
                    android:text="@string/registrar"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            <Button
                    android:id="@+id/buttonContinuarComoConvidado"
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="140dp"
                    android:layout_marginBottom="100dp"
                    android:text="@string/continuar_como_convidado"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="18sp" />
        </RelativeLayout>

        <ImageView
                android:id="@+id/mainLogo"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginStart="55dp"
                android:layout_alignParentBottom="true"
                android:src="@drawable/deck_logo" />
    </RelativeLayout>
</FrameLayout>